@@ -108,10 +108,10 @@ SECTIONS
      * Special FreeBSD sysctl sections.
      */
     . = ALIGN (16);
-    __start_set_sysctl_set = .;
-    *(set_sysctl_*);
-    __stop_set_sysctl_set = ABSOLUTE(.);
-    *(set_domain_*);
+    ___start_set_sysctl_set = .;
+    *(set_sysc*);   /* set_sysctl_* but name is truncated by SH-coff */
+    ___stop_set_sysctl_set = ABSOLUTE(.);
+    *(set_doma*);   /* set_domain_* but name is truncated by SH-coff */
     *(set_pseudo_*);
 
     /* .gnu.warning sections are handled specially by elf32.em.  */
@@ -133,12 +133,16 @@ SECTIONS
   {
     *(.data)
     *(.data.*)
+    *(.gcc_exc)
+    ___EH_FRAME_BEGIN__ = .;
+    *(.eh_fram*)
+    ___EH_FRAME_END__ = .;
+    LONG(0);
+    *(.gcc_except_table)
     *(.gnu.linkonce.d*)
     SORT(CONSTRUCTORS)
   } > ram
   .data1   : { *(.data1) } > ram
-  .eh_frame : { *(.eh_frame) } > ram
-  .gcc_except_table : { *(.gcc_except_table) } > ram
   .ctors   : 
   {
     ___ctors = .;
